--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 /token_cfg.py
+__pycache__/config.cpython-310.pyc
+__pycache__/config.cpython-311.pyc
+__pycache__/database.cpython-311.pyc
+__pycache__/database.cpython-310.pyc
+__pycache__/table_stat.cpython-310.pyc
+__pycache__/table_stat.cpython-311.pyc
+cogs/__pycache__/cs_bot.cpython-310.pyc
+cogs/__pycache__/cs_bot.cpython-311.pyc
+players_names.db
+cogs/__pycache__/cs_bot.cpython-310.pyc
+cogs/__pycache__/cs_bot.cpython-311.pyc
+__pycache__/config.cpython-311.pyc
+__pycache__/database.cpython-310.pyc
+__pycache__/database.cpython-311.pyc
+__pycache__/table_stat.cpython-310.pyc
+__pycache__/table_stat.cpython-311.pyc
