--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
+*.pyc
 /token_cfg.py
-__pycache__/config.cpython-310.pyc
-__pycache__/config.cpython-311.pyc
-__pycache__/database.cpython-311.pyc
-__pycache__/database.cpython-310.pyc
-__pycache__/table_stat.cpython-310.pyc
-__pycache__/table_stat.cpython-311.pyc
-cogs/__pycache__/cs_bot.cpython-310.pyc
-cogs/__pycache__/cs_bot.cpython-311.pyc
 players_names.db
-cogs/__pycache__/cs_bot.cpython-310.pyc
-cogs/__pycache__/cs_bot.cpython-311.pyc
-__pycache__/config.cpython-311.pyc
-__pycache__/database.cpython-310.pyc
-__pycache__/database.cpython-311.pyc
-__pycache__/table_stat.cpython-310.pyc
-__pycache__/table_stat.cpython-311.pyc
+
+hlstatsx/hlstatx_config.py
